<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_transaction_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorTextLight">
        <EditText
            android:id="@+id/transaction_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="@string/input_length"
            android:hint="@string/item_name_label"
            android:textColor="@color/colorTextLight"
            android:backgroundTint="@color/colorTextLight"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/transaction_input_text_size"
        android:text="@string/transaction_type_label"
        android:textColor="@color/colorTextLight"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radio_group_type"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton android:id="@+id/radio_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transaction_transaction_label"
                android:checked="true"
                android:textColor="@color/colorAccent"
                android:buttonTint="@color/colorTextLight"
                android:layout_marginEnd="16dp"/>
            <RadioButton android:id="@+id/radio_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transaction_refund_label"
                android:textColor="@color/colorTextLight"
                android:buttonTint="@color/colorTextLight"/>
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_amount_label"
        android:paddingRight="@dimen/row_padding_size"
        android:textSize="@dimen/transaction_input_text_size"
        android:textColor="@color/colorTextLight"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorTextLight">
        <EditText
            android:id="@+id/transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="$0.00"
            android:textColor="@color/colorTextLight"
            android:backgroundTint="@color/colorTextLight"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/transaction_input_text_size"
        android:text="@string/transaction_date_label"
        android:textColor="@color/colorTextLight"/>
    <DatePicker
        android:id="@+id/add_transaction_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/date_picker_height"
        android:paddingLeft="@dimen/row_padding_size"
        android:paddingRight="@dimen/row_padding_size"
        android:paddingBottom="0dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        >
    </DatePicker>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_transaction_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorTextLight">
        <EditText
            android:id="@+id/transaction_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="@string/input_length_longer"
            android:hint="@string/memo_label"
            android:textColor="@color/colorTextLight"
            android:backgroundTint="@color/colorTextLight"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/recurring_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recurring"
        android:textColor="@color/colorTextLight"
        android:backgroundTint="@color/colorTextLight" />

</LinearLayout>