...
            android:textColor="@color/colorTextLight"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/overall_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/row_padding_size"
        android:paddingRight="@dimen/row_padding_size"
        android:paddingTop="@dimen/row_padding_size"
        android:paddingBottom="@dimen/row_padding_size"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/placeholder"
        />

    <ListView android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarStyle="outsideOverlay"
        android:dividerHeight="@dimen/budget_screen_divider_height"
        android:divider="@null"
...
