...
        </RelativeLayout>

        <!--
            Button to add a transaction for the specicategorydget
        -->
        <ImageButton
            android:id="@+id/transaction_button"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginRight="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_add_black_36dp"
            android:tint="@color/colorPrimary"
...
