...
    <string name="sign_up_email_label">Email</string>
    <string name="sign_up_password_label">Password</string>
    <string name="sign_up_reenter_password">Repeat Password</string>
    <string name="sign_up_pick_question_label">Pick A Security Question:</string>
    <string name="sign_up_enter_answer_label">Enter\nAnswer</string>
    <string name="sign_up_create_label">Create Account</string>
    <string name="login_error">Username or password was invalid</string>
    <string name="mismatched_passwords">Passwords do not match</string>
    <string name="password_too_short">Password must be at least 5 characters long</string>
    <string name="username_unavailable">Username already taken</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="no_answer_label">You must enter a security answer</string>
...
